# manual_retention

./: .pre-commit-config.yaml  pyproject.toml  streamlit_app.py
data_results/: retention.ftr
notebooks/: eda.ipynb  retention_churn.ipynb
