[project]
name = "manual-retention"
version = "0.1.0"
description = ""
authors = [
    {name = "agnaldoluiz",email = "agnaldoluiz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit-pandas-profiling (>=0.1.3,<0.2.0)",
    "ipython (>=8.31.0,<9.0.0)",
    "ipympl (>=0.9.6,<0.10.0)",
    "lifelines (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
ipython = "^8.31.0"
jupyter = "^1.1.1"
dbt = "^1.0.0.38.24"

